<resources>
    <string name="app_name">App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be at least six characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_registration_screen">Register</string>
    <string name="Register">Register</string>
    <string name="username">Username</string>
    <string name="UserString">User type:</string>
    <string name="title_shelter_list">Shelters</string>
    <string name="title_shelter_detail">Shelter Detail</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_list_view_items">list_view_items</string>
    <string name="ClaimRelease">Claim or release beds</string>
    <string name="Claim">Claim</string>
    <string name="Release">Release</string>
    <string name="ShelterTag">Shelter: </string>
    <string name="RestrictionsTag">Restrictions: </string>
    <string name="FindShelters">Find Shelters</string>
    <string name="ListShelters">List Shelters</string>
    <string name="LogOut">Log Out</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="Map">View Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_search">MapSearchActivity</string>
    <string name="MapLaunch">Launch Map</string>
    <string name="Men">Men</string>
    <string name="Women">Women</string>
    <string name="Nonbinary">Non-binary</string>
    <string name="Family">Families</string>
    <string name="FamChildren">Families with children</string>
    <string name="FamilyNewborn">Families with newborns</string>
    <string name="Children">Children</string>
    <string name="YoungAdult">Young adults</string>
    <string name="Veterans">Veterans</string>
    <string name="Pin">Pin Mark</string>
    <string name="title_activity_ban">BanActivity</string>
    <string name="ban_unban">Ban/Unban</string>
    <string name="ban">Ban</string>
    <string name="unban">Unban</string>
    <string name="back">Back</string>
    <string name="title_activity_create_shelter">CreateShelterActivity</string>
</resources>
