<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.cs2340.app.WelcomeScreen">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_welcome_screen"
        app:layout_behavior="@string/action_sign_in" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Register"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="left|center" />

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="right|center"
        tools:layout_editor_absoluteX="192dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
